# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  Justfile  configuration.yaml  spec.yml  sqlx-data.json
.github/workflows/: general.yml  publish.yml
configuration/: base.yaml
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  configmap.yml  deployment.yaml  ingress.yml  secret.yml  service.yml
migrations/: 20230510212935_create_subscriptions_table.sql  20230707080918_fix-typo.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
